styles/hydrogen.less
// The ui-variables file is provided by base themes provided by Atom.
//
// See https://github.com/atom/atom-dark-ui/blob/master/styles/ui-variables.less
// for a full listing of what's available.
@import "ui-variables";
@import "syntax-variables";

// -------------- Colors ------------------
@hydrogen-light-background: fadein(lighten(@syntax-background-color, 40%), 100%);
@hydrogen-dark-background: fadein(lighten(@syntax-background-color, 10%), 100%);

@hydrogen-inline-background: contrast(@syntax-text-color, @hydrogen-dark-background, @hydrogen-light-background, 20%);
@hydrogen-inline-color: lighten(@syntax-text-color, 10%);
@hydrogen-error-color: average(@syntax-text-color, red);

.hydrogen.marker {
  display: flex;
}

.hydrogen {

// -------------- Globals -----------------
code {
  color: inherit;
  background: inherit;
  font-size: inherit;
  font-family: inherit;
  padding: 0;
  white-space: pre;
}

img {
    background-color: white;
}

img, svg, video, audio {
  display: block;
}

td, th {
    border: 1px solid average(@syntax-text-color, @base-border-color);
    padding: 0.35em 0.7em;
}

svg:first-child {
  background-color: white;
}

.MathJax_SVG_Display {
    margin: 0;
}

.MathJax_SVG {
    .noError {
        padding: 0;
        border: none;
        color: @hydrogen-error-color
    }
    svg {
        background-color: unset;
        margin: 0 !important;
        display: inline;
    }
}

.nteract-display-area-stderr {
  color: @hydrogen-error-color;
}

// ----------- Inline Output --------------
.inline-container {
  color: @hydrogen-inline-color;
  background: @hydrogen-inline-background;
  border-radius: @component-border-radius;
  box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
}

.inline-container .cell_display {
  padding: 0 0.25em 0 0.25em;
}

.inline-container.icon::before {
  font-size: 80%;
  width: 1.2em;
  margin: 0;
}

// ---------- Multiline Output ------------

.multiline-container {
  display: flex;
  border: solid 1px @base-border-color;
}

.multiline-container .cell_display {
  padding: @component-padding;
}

.multiline-container .toolbar {
  border-left: solid 1px @base-border-color;
  display: flex;
  flex-direction: column;
}

.multiline-container .toolbar > :not(:first-child) {
  border-top: solid 1px @base-border-color;
}

.multiline-container .toolbar .icon::before {
  margin: 0;
  width: 2.5em;
  line-height: 2.5em;
  height: 2.5em;
  cursor: pointer;
}

.multiline-container .toolbar .icon:hover {
  color: @hydrogen-inline-color;
}

// -------------- Spinner -----------------
.spinner {
  padding: 0 0.5em 0 0.5em;
}

.spinner > div {
  background-color: @hydrogen-inline-color;
  height: 100%;
  width: 2px;
  display: inline-block;
  margin-left: 1px;
  animation: stretchdelay 1.2s infinite ease-in-out;
}

.spinner .rect1 {
  margin-left: 0px;
}

.spinner .rect2 {
  animation-delay: -1.1s;
}

.spinner .rect3 {
  animation-delay: -1.0s;
}

.spinner .rect4 {
  animation-delay: -0.9s;
}

.spinner .rect5 {
  animation-delay: -0.8s;
}

@keyframes stretchdelay {
  0%, 40%, 100% { transform: scaleY(0.32);}
  20% { transform: scaleY(0.8); }
}
}

// -------------- Watches -----------------

.hydrogen.watch-sidebar {
  width: 300px;
  min-width: 250px;
  overflow-y: overlay;
  padding: 10px;

  .toolbar {
    .language {
      display: inline-block;
      padding: @component-icon-padding - 1px;
    }
    .btn {
      float: right;
    }
  }

  .watch-view {
    width: 100%;
    .watch-input {
      margin-top: 10px;
      padding: 3px;
      border-radius: 3px;
      background-color: @syntax-background-color;
      font-size: @font-size;
      min-height: 3em;
      border: 1px solid @base-border-color;
    }

    .history-switch {
      padding: 3px 0 3px 0;
      position: relative;

      .counter {
        position: absolute;
        pointer-events: none;
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%);
      }
      .next-btn {
        float: right;
      }

      .scrollbar {
        overflow-x: scroll;
        overflow-y: hidden;
        margin-top: -@component-icon-size - @component-icon-padding - 1px;
        margin-left: @component-icon-size + @component-icon-padding + 2px;
        margin-right: @component-icon-size + @component-icon-padding + 2px;
        .hidden {
          height: 1px;
          width: 1000px;
          visibility: hidden;
          display: block !important;
        }
      }
      .hide {
        display: none;
      }
      .show {
        display: block;
      }
      ::-webkit-scrollbar {
        height: @component-icon-size + @component-icon-padding;
        -webkit-appearance: none;
      }
      ::-webkit-scrollbar-thumb {
        border-radius: @component-border-radius;
        border: 1px solid @button-border-color;
        background: @button-background-color;
      }
      ::-webkit-scrollbar-thumb:hover {
        background: @button-background-color-hover;
      }
    }
  }

  .watch-resize-handle {
    position: absolute;
    top: 0px;
    bottom: 0px;
    left: -5px;
    width: 10px;
    cursor: ew-resize;
  }

  .btn-group {
    margin-top: 10px;
    display: block;
    .btn {
      width: 50%;
    }
  }

  .multiline-container, .multiline-container .cell_display {
    width: 100%;
  }

  video, img, svg {
    width: unset !important;
    height: unset !important;
    max-width: 100% !important;
    max-height: 350px !important;
}
}

.hidden {
  display: none;
}

.hydrogen.input-view {
  .label {
      padding-bottom: @component-padding;
  }
}

.hydrogen-panel-body {
  padding: @component-padding;
  overflow-y: auto;
  max-height: calc(~'100% - 2px' - @font-size + 2 * @component-padding);

  span[style] {
      color: @text-color-info !important;
  }
  code {
    color: inherit;
    white-space: pre;
    padding: 0px;
    font-size: @font-size;
    font-family: inherit;
    background: inherit;
  }
}

